--- a/ui/src/components/PostContent/PostContent.css
+++ b/ui/src/components/PostContent/PostContent.css
@@ -1,11 +1,10 @@
 .Post{
     margin: 5px;
     padding: 20px;
+    
     min-height: 100px;
     min-width: 250px;
-    /* min-height: 100px;
-    min-width: 300px; */
-    border:solid 1px black;
-    /* display: inline-block; */
-    /* text-align: center; */
+
+    background-color: #3C80B4;
+    border-radius: 3px;
 }
