--- a/ui/src/components/SubmitPost/SubmitPost.css
+++ b/ui/src/components/SubmitPost/SubmitPost.css
@@ -2,4 +2,12 @@
     height: 100px;
     background-color: #24326B;
     flex-shrink: 0;
+
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.SubmitInput{
+    height: 60px;
 }
